# parler-tts

./: .dockerignore  .gitignore  Dockerfile  cut_datasets.py  note.md  pyproject.toml  test.py  train.sh
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
training/: gen_high_score.py  play_model.py  run_parler_tts_training.py
