[project]
name = "fine-tune-parler-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rubyinserter",
    "numpy<2",
    "torch==2.4.0+cu121",
    "transformers>=4.46.3",
    "protobuf==3.19.6",
    "descript-audio-codec",
    "descript-audiotools",
    "jiwer",
    "accelerate",
    "evaluate",
    "datasets[audio]>=2.14.5",
    "wandb>=0.18.7",
    "sentencepiece==0.1.96",
    "numba>=0.53.1",
    "llvmlite>=0.36.0",
    "librosa>=0.10.2.post1",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[tool.uv.sources]
rubyinserter = { git = "https://github.com/getuka/RubyInserter.git" }
torch = { index = "torch-cuda" }
